# Arcaine

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  denoise_replay.html  docker-compose.yml  pyproject.toml
.agents/skills/analyze-transformers-model-description/: SKILL.md
.agents/skills/check-available-hardware/: SKILL.md  get_device_props
.agents/skills/docker-exec/: SKILL.md
.agents/skills/use-reference/: SKILL.md
.devops/: Dockerfile  entrypoint.sh
.maki/: permissions.toml
.skills/check-available-hardware/: get_device_props
bench/sweep/: plot.py  sweep.py
notes/artifacts/: README.md  dpas_gemm_test.cpp  dpas_mad_probe.cpp  dpas_moe_grouped_bench.cpp  jm_probe.cpp  llm_scaler_fp8_gemm_study.md  matrix_probe.cpp  nvfp4_dpas.cpp  nvfp4_dpas.hpp
notes/diffusion_gemma/: INT4_AWQ_FUSIONS.md  NVFP4_DPAS_KERNEL.md  NVFP4_INFERENCE_NOTES.md  SYCL_VLLM_XPU_RESEARCH_REPORT.md  architecture.md  diffusion_gemma_moe_architecture.md  tensor_mapping_int4_awq.md
notes/gemma4_unified_12b/: IMPLEMENTATION_PLAN.md
notes/llamacpp_sycl/: LLAMACPP_SYCL_DPAS_REPORT.md
notes/qwen3_5/: QWEN3_5_ARCHITECTURE.md  QWEN3_5_ONEDNN_SYCLTLA_INTEGRATION.md  QWEN3_5_XPU_KERNELS.md
notes/qwen3_5_27b/: architecture.md  tensor_mapping.md  tensors.tsv
notes/qwen_agentworld_35b/: QWEN_AGENTWORLD_35B_ARCHITECTURE.md
scripts/: benchmark_diffusion_int4_e2e_ab.sh  benchmark_diffusion_int4_fusions.sh  benchmark_qwen35_attention_ab.sh  benchmark_qwen35_delta_decode_fusion_ab.sh  benchmark_qwen35_deltanet_ab.sh  benchmark_qwen35_nvfp4_mlp_ab.sh  bootstrap.sh  diffusion_gemma_Q8_0.md  dump_gguf_metadata.py
src/: arcaine_kbench.cpp  arcaine_server.cpp  bench.cpp  diffusion_attn_selfcheck.cpp  diffusion_bench.cpp  diffusion_main.cpp  diffusion_server.cpp  main.cpp  nvfp4_batched_check.cpp  nvfp4_batched_probe.cpp  nvfp4_blockload_probe.cpp  nvfp4_dpas_dist_probe.cpp  nvfp4_dpas_probe.cpp  nvfp4_graph_capture_probe.cpp  nvfp4_roofline_bench.cpp  nvfp4_vec_dequant_probe.cpp  nvfp4_xe2_capture_probe.cpp  nvfp4_xe2v3_isolate.cpp  q8_grouped_bench.cpp  q8_roofline_bench.cpp  qwen35_attention_bench.cpp  qwen35_delta_decode_fusion_bench.cpp  qwen35_deltanet_bench.cpp  qwen35_nvfp4_mlp_bench.cpp  qwen_attn_selfcheck.cpp  qwen_deltanet_selfcheck.cpp  qwen_forward_selfcheck.cpp  qwen_kernels_selfcheck.cpp  qwen_load_smoke.cpp  qwen_moe_selfcheck.cpp  register_builtins.cpp
src/bench/: diffusion_int4_fusion_bench.cpp  nvfp4_roofline_bench.cpp  qwen35_attention_bench.cpp  qwen35_delta_decode_fusion_bench.cpp  qwen35_deltanet_bench.cpp  qwen35_nvfp4_mlp_bench.cpp
src/common/: generation.hpp  model.hpp  model_interface.hpp  registry.cpp  registry.hpp  sampler.hpp  test_tokenizer.cpp
src/common/bench/: registry.hpp  util.hpp
src/common/gpu/: buffer.hpp  device_select.hpp  engine.hpp  expert_parallel.cpp  expert_parallel.hpp  fp8.hpp  int4.hpp  int4_grouped_moe.hpp  mem_planner.cpp  mem_planner.hpp  nvfp4.hpp  nvfp4_session.cpp  ops.hpp  placement.cpp  placement.hpp  q8_0.hpp
src/common/io/: gguf.hpp  quant_loader.cpp  quant_loader.hpp  safetensors.hpp  tensor_view.hpp
src/common/kernels/: attention_mask.hpp  elementwise.hpp  embedding.hpp  layer_norm.hpp  rms_norm.hpp  rope.hpp  scatter.hpp
src/common/layers/: attention_batched.hpp  attention_layout.hpp
src/common/preprocess/: audio_proc.cpp  audio_proc.hpp  chat_template.cpp  chat_template.hpp  image_proc.cpp  image_proc.hpp  tokenizer.cpp  tokenizer.hpp  unicode.cpp  unicode.h  vad.hpp
src/diffusion_gemma/: activation_plan.cpp  activation_plan.hpp  arena.hpp  attention.cpp  attention.hpp  config.hpp  generate.cpp  kv_cache.hpp  layer.hpp  linear_dispatch.hpp  loader.cpp  loader.hpp  model.cpp  model.hpp  moe.cpp  moe.hpp  self_conditioning.hpp  weights.hpp
src/diffusion_gemma/fusions/: logits.hpp  postnorm.hpp  prenorm.hpp
src/gemma4_unified/: attention.cpp  attention.hpp  audio_embedder.cpp  audio_embedder.hpp  config.hpp  decoder_layer.hpp  ffn.cpp  ffn.hpp  kv_cache.hpp  loader.cpp  model.cpp  model.hpp  register.cpp  vision_embedder.cpp  vision_embedder.hpp  weights.hpp
src/modeling/diffusion_gemma/: activation_plan.cpp  arena.hpp  attention.cpp  attention.hpp  attention_kernels.hpp  config.hpp  device_sampler.hpp  generate.cpp  kv_cache.hpp  layer.hpp  linear_dispatch.hpp  loader.cpp  loader.hpp  model.cpp  model.hpp  moe.cpp  moe.hpp  sampler.hpp  self_conditioning.hpp  weights.hpp
src/modeling/diffusion_gemma/fusions/: fattn_prefill.hpp  int4_awq.hpp  logits.hpp  postnorm.hpp  prenorm.hpp
src/modeling/gemma4_unified/: attention.cpp  attention.hpp  audio_embedder.cpp  audio_embedder.hpp  config.hpp  decoder_layer.hpp  ffn.cpp  ffn.hpp  kv_cache.hpp  loader.cpp  model.cpp  model.hpp  register.cpp  register.hpp  vision_embedder.cpp  vision_embedder.hpp  weights.hpp
src/modeling/qwen3_5/: cache.hpp  config.hpp  kernels.hpp  loader.cpp  loader.hpp  model.cpp  model.hpp  operators.hpp  register.cpp  register.hpp  vision.cpp  vision.hpp  weights.hpp  workspace.hpp
src/modeling/qwen3_5_moe/: attention.hpp  config.hpp  gated_deltanet.hpp  kernels.hpp  loader.cpp  loader.hpp  model.cpp  model.hpp  moe.hpp  register.cpp  register.hpp  weights.hpp
src/utils/: chat.cpp  chat.hpp  chat_template_kwargs.hpp  gemma4_tool_call_parser.cpp  gemma4_tool_call_parser.hpp  gpu_check.cpp  profile.cpp  profile.hpp  test_chat_template_kwargs.cpp  tool_call_parser.cpp  tool_call_parser.hpp  viz.cpp  viz.hpp
tests/: test_openai_reasoning_spawn.py  test_openai_tool_calling.py  test_tool_call_parser_unit.py
